--- a/src/main/webapp/Resources/css/main.css
+++ b/src/main/webapp/Resources/css/main.css
@@ -102,3 +102,31 @@ tr:nth-of-type(2n + 1) {
 .message p {
     text-align: center;
 }
+
+.wifi-info-container {
+    margin-top: 1rem;
+    list-style: none;
+    width: 100%;
+}
+
+.wifi-info-item {
+    width: 100%;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    border: 1px solid rgba(0,0,0,0.1);
+}
+
+.wifi-info-item span {
+    padding: 0 1rem;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.wifi-info-label {
+    width: 40%;
+    background-color: lightseagreen;
+    text-align: center;
+    justify-content: center;
+}
