--- a/src/main/webapp/Resources/css/main.css
+++ b/src/main/webapp/Resources/css/main.css
@@ -17,6 +17,10 @@ body {
     padding: 1rem;
 }
 
+nav {
+    margin-bottom: 1rem;
+}
+
 .main-title {
     margin-bottom: 1rem;
 }
@@ -130,3 +134,45 @@ tr:nth-of-type(2n + 1) {
     text-align: center;
     justify-content: center;
 }
+
+select option[value=""][disabled] {
+    display: none;
+}
+
+form {
+    margin: 1rem 0;
+    width: 60%;
+}
+
+.form-item {
+    display: flex;
+    align-items: center;
+    height: 75px;
+    border: 1px solid rgba(0,0,0,0.1);
+    padding: 0.5rem;
+    justify-content: center;
+}
+
+.form-item label {
+    width: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: lightseagreen;
+    height: 100%;
+    margin-right: 1rem;
+}
+
+.form-item input {
+    flex-grow: 1;
+    height: 100%;
+    width: 90%;
+    font-size: 1.5rem;
+    padding: 1rem;
+}
+
+.form-item button {
+    padding:0 1rem;
+    margin: 0 1rem;
+}
+
