--- a/src/main/webapp/Resources/css/main.css
+++ b/src/main/webapp/Resources/css/main.css
@@ -64,6 +64,19 @@ tr:nth-of-type(2n + 1) {
     background-color: rgba(0,0,0,0.1);
 }
 
+.open-wifi-info-wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.open-wifi-info-wrapper p {
+    font-size: 2rem;
+}
+
 .control-container {
     margin: 1rem 0;
     display: flex;
@@ -92,19 +105,32 @@ tr:nth-of-type(2n + 1) {
     margin-right: 1rem;
 }
 
-.message {
+.wait-message {
     display: none;
     position: fixed;
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 250px;
     top: 50%;
     left: 50%;
+    border-radius: 1rem;
+    border: 1px solid rgba(0,0,0,0.4);
     transform: translate(-50%, -50%);
-    background-color: lightblue;
+    backdrop-filter: blur(5px);
 }
 
-.message p {
+.wait-message-inner-wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+}
+
+.wait-message-content {
     text-align: center;
+    font-weight: bold;
 }
 
 .wifi-info-container {
@@ -133,6 +159,7 @@ tr:nth-of-type(2n + 1) {
     background-color: lightseagreen;
     text-align: center;
     justify-content: center;
+    color: white;
 }
 
 select option[value=""][disabled] {
@@ -176,3 +203,12 @@ form {
     margin: 0 1rem;
 }
 
+.spinner {
+    position: fixed;
+    width: 200px;
+    height: 200px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: lightblue;
+}
